--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -15,6 +15,8 @@
 	width: 100%;
 	min-height: 100%;
 	height: 100%;
+	grid-template-columns: auto;
+	grid-template-rows: 56px;
 
 	h1 {
 		.app-name {
@@ -181,6 +183,12 @@
 }
 
 @media (min-width: 320px) and (max-width: 420px) {}
+
+@media (min-width: 600px) {
+	.app-container {
+		grid-template-rows: 64px;
+	}
+}
 
 @media (min-width: 768px) {
 	.app-container {
