--- a/src/app/pages/search-page/search-page.component.scss
+++ b/src/app/pages/search-page/search-page.component.scss
@@ -8,41 +8,39 @@
     background-color: var(--search-page-tool-background-color);
     padding: 0 15px;
     border-radius: 5px;
-    .search {
-      mat-form-field {
-        margin-top: 15px;
-        width: 100%;
-      }
 
-      mat-icon {
-        font-size: 16px;
-        color: rgba(0, 0, 0, 0.8);
-
-        fa-icon {
-          position: absolute;
-          top: 2px;
-        }
-      }
+    form {
+      display: grid;
+      grid-template-columns: auto;
+    }
+    
+    .custom-input:nth-of-type(1) {
+      padding-top: 15px;
     }
 
     .dropdowns {
       display: grid;
       font-size: 12px;
-      grid-template-columns: 1fr;
+      grid-template-areas: "order-by"
+      "checkboxes";
       grid-column-gap: 15px;
       padding-bottom: 15px;
       align-content: center;
 
+      .order-by-container {
+        grid-area: order-by;
+      }
+
       .checkboxes-container {
+        grid-area: checkboxes;
         align-self: center;
         p {
-          margin-bottom: 0;
-          margin-top: 0;
-          font-weight: bold;
+          margin-bottom: 5px;
+          color: var(--custom-input-label-container);
         }
         .checkboxes {
           display: grid;
-          grid-auto-columns: auto;
+          grid-template-columns: 1fr 1fr 1fr;
           mat-checkbox:not(:last-child) {
             margin-right: 15px;
           }
@@ -78,12 +76,17 @@
 
   .section-container {
     .search-container {
+      form {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-gap: 15px;
+      }
       .dropdowns {
-        grid-template-columns: 200px 1fr;
-        grid-auto-rows: 55px;
+        grid-template-areas: "order-by checkboxes";
         padding-bottom: 10px;
 
         .checkboxes-container {
+          margin-top: -15px;
           .checkboxes {
             display: inline-block;
           }
