--- a/src/app/pages/manage/manage-resources/manage-resources.component.html
+++ b/src/app/pages/manage/manage-resources/manage-resources.component.html
@@ -11,7 +11,8 @@
   </div>
 </div>
 
-<div class="see-more" *ngIf="!isLoading && resources.length < resourcesCount && !resourceSearchQuery"
+<div class="see-more" matRipple *ngIf="!isLoading && resources.length < resourcesCount && !resourceSearchQuery"
   (click)="loadMorePosts()">
-  See More
+  <fa-icon [icon]="faArrowDown"></fa-icon>
+  <span>See More</span>
 </div>
