--- a/src/assets/styles/resource-grid.scss
+++ b/src/assets/styles/resource-grid.scss
@@ -15,11 +15,23 @@
 }
 
 .see-more {
+  width: min-content;
+  margin: 15px auto;
+  display: grid;
+  grid-template-columns: 15px 55px;
+  grid-gap: 5px;
   cursor: pointer;
-  text-align: center;
   font-size: 12px;
-  font-weight: bold;
-  margin: 5px;
+  padding: 5px 15px;
+  border-radius: 15px;
+  background-color: var(--see-more-background-color);
+  box-shadow: 0px 10px 14px -2px rgba(0,0,0,0.31);
+  transition: background-color 0.2s ease-in-out;
+  color:var(--see-more-color);
+
+  &:hover {
+    background-color: rgba(0, 0, 0, .1);
+  }
 }
 
 
