decreased build size

--- a/src/app/components/user-image/user-image.component.scss
+++ b/src/app/components/user-image/user-image.component.scss
@@ -53,6 +53,15 @@
   }
 }
 
+.lg {
+  width: 200px;
+  height: 200px;
+
+  p {
+    font-size: 4rem;
+  }
+}
+
 .clickable {
   cursor: pointer;
   &:hover {
