--- a/src/app/components/custom-button/custom-button.component.scss
+++ b/src/app/components/custom-button/custom-button.component.scss
@@ -5,7 +5,7 @@ $button-text-color: white;
 
 .custom-button {
     border-radius: 50px;
-    border: 0;
+    border: var(--custom-button-border);
     color: $button-text-color;
     cursor: pointer;
     transition: all 0.2s ease-in;
