--- a/src/app/components/dialogs/cpi/cpi.component.scss
+++ b/src/app/components/dialogs/cpi/cpi.component.scss
@@ -27,6 +27,22 @@
   }
 }
 
+.local-image {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-bottom: 25px;
+  display: block;
+  width: 204px;
+  height: 204px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .controls {
   button {
     &:not(:last-child) {
