--- a/src/app/pages/profile/public-profile/public-profile.component.html
+++ b/src/app/pages/profile/public-profile/public-profile.component.html
@@ -5,50 +5,24 @@
     </div>
     <div class="section" *ngIf="!isLoading">
       <div class="profile-picture">
-        <div
-          class="image-container"
-          [ngStyle]="{
+        <div class="image-container" [ngStyle]="{
             'background-image': 'url(' + image + ')'
-          }"
-        ></div>
+          }"></div>
         <div class="text">
           <p>{{ username }}</p>
           <p>{{ email }}</p>
         </div>
-        <button
-          class="follow-user"
-          mat-stroked-button
-          color="primary"
-          (click)="follow()"
-          *ngIf="!isFollowed"
-        >
+        <button class="follow-user" mat-stroked-button color="primary" (click)="follow()" *ngIf="!isFollowed">
           Follow
         </button>
-        <button
-          class="follow-user"
-          mat-stroked-button
-          color="primary"
-          (click)="unfollow()"
-          *ngIf="isFollowed"
-        >
+        <button class="follow-user" mat-stroked-button color="primary" (click)="unfollow()" *ngIf="isFollowed">
           Unfollow
         </button>
       </div>
-      <button
-        class="follow-user-sm"
-        mat-stroked-button
-        (click)="follow()"
-        *ngIf="!isFollowed"
-        color="primary"
-      >
+      <button class="follow-user-sm" mat-stroked-button (click)="follow()" *ngIf="!isFollowed" color="primary">
         Follow
       </button>
-      <button
-        class="follow-user-sm"
-        mat-stroked-button
-        (click)="unfollow()"
-        *ngIf="isFollowed"
-      >
+      <button class="follow-user-sm" mat-stroked-button (click)="unfollow()" *ngIf="isFollowed">
         Unfollow
       </button>
 
@@ -76,16 +50,8 @@
   <mat-tab label="Resources">
     <div class="section-container">
       <!-- * Resource grid -->
-      <div
-        class="resource-grid"
-        *ngIf="!isLoading"
-      >
-        <app-resource
-          *ngFor="let resource of resources"
-          [data]="resource"
-          isInCollectionPage="false"
-          self="false"
-        >
+      <div class="resource-grid" *ngIf="!isLoading">
+        <app-resource *ngFor="let resource of resources" [data]="resource" isInCollectionPage="false" self="false">
         </app-resource>
       </div>
 
@@ -107,10 +73,7 @@
   <mat-tab label="Collections">
     <div class="section-container">
       <div class="list-of-collections" *ngIf="!isLoading">
-        <app-collection
-          *ngFor="let collection of collections"
-          [data]="collection"
-        ></app-collection>
+        <app-collection *ngFor="let collection of collections" [data]="collection"></app-collection>
       </div>
 
       <div class="list-of-collections" *ngIf="isLoading">
