quality of life improvements

--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -45,3 +45,34 @@
         </div>
     </div>
 </div>
+
+<div class="profile-summary" *ngIf="type === 'profile-summary'">
+    <div class="profile-picture">
+        <div class="image-container animate">
+        </div>
+        <div class="text">
+            <p class="name animate"></p>
+        </div>
+    </div>
+
+    <div class="boxes">
+        <div class="box animate"></div>
+        <div class="box animate"></div>
+        <div class="box animate"></div>
+    </div>
+
+    <div class="section">
+        <div class="header animate"></div>
+        <div class="content animate"></div>
+    </div>
+
+    <div class="section">
+        <div class="header animate"></div>
+        <div class="content animate"></div>
+    </div>
+
+    <div class="section">
+        <div class="header animate"></div>
+        <div class="content animate"></div>
+    </div>
+</div>
