--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -1,3 +1,5 @@
+<app-loading type="profile-summary" *ngIf="loading"></app-loading>
+
 <div class="summary-parent" *ngIf="!loading">
   <div class="columns">
     <app-user-image
