--- a/src/app/pages/feed/feed.component.html
+++ b/src/app/pages/feed/feed.component.html
@@ -9,50 +9,15 @@
   >
     <app-post *ngFor="let post of posts" [data]="post" [currentUser]="username" [currentUserId]="userId"></app-post>
 
-    <div class="section-container" *ngIf="posts.length === 0">
+    <!-- * If loading -->
+    <div class="section-container" *ngIf="isLoading">
+      <app-loading type="post"></app-loading>
+    </div>
+
+    <!-- * If no data -->
+    <div class="section-container" *ngIf="posts.length === 0 && !isLoading">
       <app-empty-state [data]="{ type: 'feed', isSelf: true }"></app-empty-state>
     </div>
   </div>
 </div>
 
-<!-- <div class="add-content-buttons">
-  <button
-    class="fab-add-content"
-    mat-fab
-    color="primary"
-    (click)="isFabActive = !isFabActive"
-    [ngClass]="
-      isFabActive
-        ? 'animation-rotate90Clockwise'
-        : 'animation-rotate90AntiClockwise'
-    "
-  >
-    <fa-icon [icon]="faPlus"></fa-icon>
-  </button>
-
-  <div
-    class="fab-add-post"
-    [ngClass]="
-      isFabActive ? 'animation-scaleAppear' : 'animation-scaleDisappear'
-    "
-    [ngStyle]="{ 'animation-delay': isFabActive ? '-0.1s' : '0s' }"
-  >
-    <span>Share Resource</span>
-    <button routerLink="/share-resource" mat-mini-fab>
-      <fa-icon [icon]="faLink"></fa-icon>
-    </button>
-  </div>
-
-  <div
-    class="fab-add-document"
-    [ngClass]="
-      isFabActive ? 'animation-scaleAppear' : 'animation-scaleDisappear'
-    "
-    [ngStyle]="{ 'animation-delay': isFabActive ? '0s' : '-0.1s' }"
-  >
-    <span>Write an Article</span>
-    <button routerLink="/write" mat-mini-fab>
-      <fa-icon [icon]="faFile"></fa-icon>
-    </button>
-  </div>
-</div> -->
