minor fixes for manage page

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -94,7 +94,7 @@
     <p>
       {{ description | truncate: [truncateValue] }}
     </p>
-    <span *ngIf="isSeeMore" (click)="seeMore()" class="see-more">See More</span>
+    <span *ngIf="isSeeMore" (click)="seeMore()" class="see-more-description">See More</span>
   </div>
 
   <!-- * Description (Post) -->
